// 所有时间戳都是毫秒时间，uint128，小端编码

syntax = "proto3";

package scout;

service Scout {
  // 反馈矿池节点中有效推送的交易数量
  rpc SendTxsCnt(TxCnt) returns (Ack) {}
}

message TxCnt {
  string name = 1; // 目标节点的名字
  string enode = 2; // 目标节点的enode
  bytes timestamp = 3; // 时间戳
  uint64 all = 4; // 矿池节点总共接收的交易数量
  uint64 pushed = 5; // 有效推送的数量
  uint64 dup = 6; // 重复的数量
  uint64 under_price  = 7; // gas price 太低的数量
  uint64 other  = 8; // 其它原因导致无效的数量
}

message Ack {
  int32 code = 1;
  string msg = 2;
}
